fixed resume page text overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -215,6 +215,9 @@ pdf {
     font-size: 0.85rem;
     padding-bottom: 8%;
   }
+  ul {
+    padding-left: 8%;
+  }
   li {
     padding-bottom: 2%;
   }
@@ -306,5 +309,21 @@ pdf {
 
   pdf {
     max-width: 100%;
+    padding: 8%;
+    font-size: 0.7rem;
+  }
+
+  pdf_title {
+    font-size: 1rem;
+  }
+
+  pdf_header {
+    font-size: 0.85rem;
+  }
+  ul {
+    padding-left: 4%;
+  }
+  li {
+    font-size: smaller;
   }
 }
